

Bug Fixes
---------


# 14-Dec-2022

Versions
--------
0.4.0 version release of ESP-ZIGBEE-SDK

Features
--------

-esp-zigbee-lib version updated to 0.4.0
-Add example for ota upgrade process
-Add README.md for ota upgrade process
-Add docs for ota api-reference
-Add ota example in CI test


Known Issues
------------

-Currently zcl time cluster is not supported for ota upgrade process

New Changes
-----------

-Add scene cluster commands
-Update the template file for MR process
-Add APIs for ota upgrade cluster to ensure the ota upgrade process

Bug Fixes
---------

-Bug fixed for buffer length issue on customized cluster command


# 23-Dec-2022

Versions
--------
0.4.1 version release of ESP-ZIGBEE-SDK

Features
--------

-esp-zigbee-lib version updated to 0.4.1
-Add support for esp32c6
-Update examples to support esp32c6
-Add esp32c6 target in CI test


Known Issues
------------


New Changes
-----------


Bug Fixes
---------

-Bug fixed for rcp_incompatible_switch_port

# 1-Feb-2023

Versions
--------
0.5.0 version release of ESP-ZIGBEE-SDK

Features
--------

- add timeout handler mechanism for user
- minor type name updates
- partition table adjustment for examples

Known Issues
------------

New Changes
-----------
- ZDO related API requests and callbacks update with new argument

Bug Fixes
---------

# 10-Feb-2023

Versions
--------
0.5.1 version release of ESP-ZIGBEE-SDK

Features
--------
- add new API for ZDO and ZCL

Known Issues
------------
- hue saturation color command not supported

New Changes
-----------
- delete the API esp_zb_set_network_channel
- add the API for esp_zb_set_primary_network_channel_set/ esp_zb_set_secondary_network_channel_set
- add the API for get current channel
- add the API for set ZCL attribute

Bug Fixes
---------
- fix the issue https://github.com/espressif/esp-zigbee-sdk/issues/1
- fix the issue https://github.com/espressif/esp-zigbee-sdk/issues/3
- fix the issue https://github.com/espressif/esp-idf/issues/10662