@@ -18,7 +18,7 @@ DEF_APP_PATH = PROJECT_ROOT / 'examples'
 APPS_BUILD_PER_JOB = 30
 PYTEST_APPS = [
     {"target": "esp32h4", "name": "esp_zigbee_cli"},
-    {"target": "esp32h4", "name": "HA_on_off_light"},
+    {"target": "esp32h4", "name": "HA_color_dimmable_light"},
 ]
 IGNORE_WARNINGS = [
     r"warning: 'init_spiffs' defined but not used",
